[tool.poetry]
name = "env-compose"
version = "0.1.0"
description = "Compose environments with ease."
authors = ["Jonathan Meier <jonathanwmeier@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
sh = "^1.14.2"
click = "^8.1.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
env-compose = "env_compose.cli:cli"
